# 2048-cli-c

./: CMakeLists.txt  README.md  main.c
